--- a/zerobuig-ui-demo/package.json
+++ b/zerobuig-ui-demo/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "vue-cli-service serve --mode dev",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bpmn-js-sketchy": "^0.5.3",
     "bpmn-js-task-resize": "^1.2.0",
     "bpmn-js-token-simulation": "0.10.0",
     "core-js": "^3.6.5",
     "diagram-js-minimap": "^2.0.4",
-    "highlight.js": "^10.5.0",
     "element-ui": "^2.15.9",
+    "highlight.js": "^10.5.0",
     "sass": "^1.30.0",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
