--- a/zerobug-activiti-demo/pom.xml
+++ b/zerobug-activiti-demo/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-core</artifactId>
+			<version>5.8.5</version>
+		</dependency>
 
 	</dependencies>
 
