--- a/zerobug-excel-demo/pom.xml
+++ b/zerobug-excel-demo/pom.xml
@@ -56,6 +56,17 @@
             <version>5.7.22</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>3.1.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
