--- a/zerobug-openapi-demo/pom.xml
+++ b/zerobug-openapi-demo/pom.xml
@@ -23,9 +23,32 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.dd</groupId>
+            <artifactId>dd-component-excel-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.alipay.sdk</groupId>-->
+<!--            <artifactId>alipay-sdk-java</artifactId>-->
+<!--            <version>4.33.12.ALL</version>-->
+<!--        </dependency>-->
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.dd</groupId>-->
+<!--            <artifactId>dd-component-pay-starter</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.aliyun</groupId>
